--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;1,600&display=swap"
+      rel="stylesheet"
+    />
     <title>JS Calculator</title>
   </head>
   <body>
     <div class="calc-grid">
       <div class="screen">
-        <div class="screen">
-          <div class="previous-operand"></div>
-          <div class="current-operand"></div>
-        </div>
+        <div class="previous-operand"></div>
+        <div class="current-operand"></div>
       </div>
+
       <button class="span-two">AC</button>
       <button>DEL</button>
       <button>/</button>
